--- a/src/styles/management.css
+++ b/src/styles/management.css
@@ -5,3 +5,16 @@ h1{
     text-align: center;
     margin-bottom: 5%;
 }
+
+.user-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
