--- a/src/styles/management.css
+++ b/src/styles/management.css
@@ -1,9 +1,14 @@
+.management-container{
+    max-height: 100%;
+}
+
 img{
-    width: 70%;
+    width: 60%;
+    max-width: 500px;
 }
 h1{
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 
 .user-info{
@@ -18,3 +23,28 @@ h1{
     flex-direction: column;
     align-items: center;
 }
+
+h2{
+    margin-bottom: 1%;
+}
+
+#IDimage{
+    margin: 2% 0;
+}
+
+.interact-btns-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#approve-btn{
+    margin-left: 2%;
+    background-color: hsl(129, 48%, 35%);
+}
+
+#reject-btn{
+    margin-right: 2%;
+    background-color: hsl(0, 48%, 35%);
+}
+
